Reimplement new pipeline and allow limiting number of cores used fo build
Co-authored-by: belliash <belliash@codingworkshop.eu.org>
Reviewed-on: https://git.codingworkshop.eu.org/xt-sys/xtchain/pulls/3
Reviewed-by: Piotr Likoski <likoski@noreply.codingworkshop.git>

--- a/.build.yml
+++ b/.build.yml
@@ -2,4 +2,13 @@ pipeline:
   build:
     image: codingworkshop/oscw-runner:latest
     commands:
-      - sh build-linux.sh
+      - CORES=10 ./build-linux.sh
+  publish:
+    image: codingworkshop/oscw-runner:latest
+    secrets:
+      - OSCW_GITHUB_USERNAME
+      - OSCW_GITHUB_PASSWORD
+    when:
+      event: tag
+    commands:
+      - github_publish $OSCW_GITHUB_USERNAME $OSCW_GITHUB_PASSWORD $(ls xtchain-*-linux.tar.zst)
