--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build XTChain
         run: CORES=10 ./build-linux.sh
       - name: Publish binaries
-        if: github.ref_type == 'tag'
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           OSCW_GITHUB_USERNAME: ${{ secrets.OSCW_GITHUB_USERNAME }}
           OSCW_GITHUB_PASSWORD: ${{ secrets.OSCW_GITHUB_PASSWORD }}
